refactoring js code

--- a/colorGame.html
+++ b/colorGame.html
@@ -13,12 +13,13 @@
         <br>
         Color Game
       </h1>
+        
 
     <div id="stripe">
       <button id="reset">New Colors</button>
       <span id="message"></span>
-      <button id = "easyBtn">Easy</button>
-      <button id="hardBtn" class="selected">Hard</button>
+      <button class="mode">Easy</button>
+      <button id="hardBtn" class="mode selected">Hard</button>
     </div>
 
   <div id="container">
